Edited wiki page Revision1Summary through web user interface.

--- a/wiki/Revision1Summary.wiki
+++ b/wiki/Revision1Summary.wiki
@@ -1,12 +1,13 @@
 *Revision 1*
- * A windows azure database was created.
- * A database called Project was created.
+
+ * A windows azure database was created called Project
  * Just one table called Task was created with 4 fields:
- # Task_Name
- # Row_No
- # Start_Time
- # End_time
+  # Task_Name
+  # Row_No
+  # Start_Time
+  # End_time
  * 3 lines of sample data were entered.
+
 
  * An MVC3 Project was created with 2 working web pages - Home & Task
  * A class model was created by successfully connecting to Azure database
