Edited wiki page Iteration_1 through web user interface.

--- a/wiki/Iteration_1.wiki
+++ b/wiki/Iteration_1.wiki
@@ -1,6 +1,6 @@
 *Iteration 1*
 
- * Task table was modified to:
+ * For the first iteration the intention as stated in the Analysis  *Document was to implement the following:
   # Row_ID
   # Task_Name
   # Start_Time
