--- a/wiki/Iteration_1.wiki
+++ b/wiki/Iteration_1.wiki
@@ -11,9 +11,9 @@ Both User Stories were successfully implemented within the context of Entity Fra
    # Task_Name
    # Start_Time
    # End_Time
-A new web page called Task was created that used CRUD and Entity Framework to manage all tasks within Azure Database.
+ * A new web page called Task was created that used CRUD and Entity Framework to manage all tasks within Azure Database. A dropdown JQuery datepicker was also used to ensure validation of Start and End times. One outstanding issue in this area (to be implemented in Iteration 2) is to automatically increment the Row_ID as each task is added (or decremented on delete). Currently it allows the Row_ID to be manually inserted.
 
 An additional web page was then created called MyChart with the intention of displaying all previous tasks in a Gantt chart. This will now be completed in Iteration 2. However Iteration 1 did successfully display a Gantt Chart from hard coded data using in built charting controls within the .Net Framework.
 
-Unit testing of the Task webpage and the CRUD was successfully achieved.
+Unit testing of the Task Webpage/CRUD was successfully achieved.
  
