Edited wiki page Iteration_1 through web user interface.

--- a/wiki/Iteration_1.wiki
+++ b/wiki/Iteration_1.wiki
@@ -17,7 +17,7 @@ Both User Stories were successfully implemented within the context of Entity Fra
 One outstanding issue in this area (to be implemented in Iteration 2) is to automatically increment the Row_ID as each task is added (or decremented on delete). Currently it allows the Row_ID to be manually inserted.
 
 ----
-An additional web page was then created called MyChart with the intention of displaying all previous tasks in a Gantt chart. This will now be completed in Iteration 2. However Iteration 1 did successfully display a Gantt Chart from hard coded data using in built charting controls within the .Net Framework. Deciding on how best to create the Gantt Chart took up the most time for this iteration. Alternatives that were researched at length included various Jquery libraries and raw JavaScript. It was finally decided to use the .Net Framework because it makes it easier to follow an MVC approach and keep the majority of code towards the Model side of the application.
+An additional web page was then created called MyChart with the intention of displaying all previous tasks in a Gantt chart. This will now be completed in Iteration 2. However Iteration 1 did successfully display a Gantt Chart from hard coded data using in built charting controls within the .Net Framework. Deciding on how best to create the Gantt Chart took up the most time for this iteration. Alternatives that were researched at length included various Jquery libraries and raw JavaScript. It was finally decided to use the .Net Framework because it makes it easier to follow an MVC approach and keep the majority of code towards the Model side of the application. With this in mind there is code within the Controllers that will be pushed back to Models in Iteration 2.
 
 Unit testing of the Task Webpage/CRUD was successfully achieved.
  
