--- a/wiki/ProjectDiary.wiki
+++ b/wiki/ProjectDiary.wiki
@@ -6,3 +6,4 @@
 ||Upload Revision 3 Source Code||12th November 2012||
 ||Upload Revision 4 Source Code||14th December 2012||
 ||Upload Revision 5 Source Code||13th January 2013||
+||Upload Revision 6 Source Code||26th January 2013||
