--- a/wiki/Revision_6.wiki
+++ b/wiki/Revision_6.wiki
@@ -9,6 +9,6 @@ For Revision 6 the two main tasks achieved were
   *	A web role was added to the project before being packaged and launched on azure cloud. 
 URL: http://roisinsfavouriteproject.cloudapp.net/
 ----
- # Connect Gantt Chart creator to the database:
-  * 2.    This was achieved by creating a 4th method in the "DatabaseManager" model called "GetDatabaseTasks" which pulls the list of tasks from the database and sends them to the chart controller. This list was then sent to the chart controller where another foreach loop was used to split the list into its seperate elements so they could be added to the chart.
+ 2. Connect Gantt Chart creator to the database:
+  *     This was achieved by creating a 4th method in the "DatabaseManager" model called "GetDatabaseTasks" which pulls the list of tasks from the database and sends them to the chart controller. This list was then sent to the chart controller where another foreach loop was used to split the list into its seperate elements so they could be added to the chart.
 ----
