--- a/wiki/Iteration_2__Revisions_5_6_7_8.wiki
+++ b/wiki/Iteration_2__Revisions_5_6_7_8.wiki
@@ -32,3 +32,9 @@ URL: http://roisinsfavouriteproject.cloudapp.net/
 4. Connect Gantt Chart creator to the database:
   *     This was achieved by creating a 4th method in the "DatabaseManager" model called "GetDatabaseTasks" which pulls the list of tasks from the database and sends them to the chart controller. This list was then sent to the chart controller where another foreach loop was used to split the list into its seperate elements so they could be added to the chart.
 ----
+5. Extended SQL table
+  *	An extra column was added to the task table called Indent_Counter. This was an integer variable that helps record a task as either a summary task or a subtask and assisted with the tab positioning of this task in both the task list and gantt chart. 
+----
+6. Added functionality to create Subtasks and Summary Tasks
+  *     This was achieved by creating 2 action results in the Task controller called "TabLeft" and "TabRight" as well as extending the functionality within the DatabaseManager model by extending the GetDatabaseTasks method and adding a TrimEnding method. Together they can change tasks into summary or subtasks or vice versa. Boundary limits exist in these methods so a subtask can only indent by 1 at each root change. To manage these tabs/spaces it was necessary to insert a PRE wrapper to preserve this spacing in Html. Additional spacing was also created after each task name in order to align tasks within the chart creator itself.
+----
