--- a/wiki/Revision_9.wiki
+++ b/wiki/Revision_9.wiki
@@ -13,7 +13,9 @@ In summary it involved replacing the "GetDatabaseTasks" method in the "DatabaseM
  # The third method created was called "MeasureText" which essentially converts each task name into an image and calculates how many pixel widths this task occupies on screen. It then sends this information back to the second method where the post spacing is added to the task name before sending to the chart. 
 ----
 * 2. Debugging
-* The following is a list of bugs that were fixed:
+
+The following is a list of bugs that were fixed:
+
  # The delete method now only allows deletion of Summary Tasks when all SubTasks are deleted first.
  # The insert method gives the same indent counter value to the new task to ensure existing subtask groupings are not split into 2 groups.    
  # The summary task is now able to increase/decrease in size when subtasks are edited (Previously only increased).
