Edited wiki page Revision_12 through web user interface.

--- a/wiki/Revision_12.wiki
+++ b/wiki/Revision_12.wiki
@@ -1,13 +1,13 @@
 *Revision 12*
 
-Revision 12 contained some very minor changes to bring the project to its final submission. It contained 2 display changes and an essential bug fix
+Revision 12 contained some very minor changes to bring the project to its final submission. It contains 2 display changes and an essential bug fix
   
 ----
 * 1. Display Improvements	
 
-This method gets tasks which are dependent on predecessor tasks and automatically edits their start and end dates to comply with the predecessor criteria.
+To improve performance in the task I replaced  the indent left and right images with '<<<' and '>>>'. In the chart tab to improve the readability of the predecessor lines I added line branches to clearly show that a task was connected to the predecessor line.
 ----
 * 2. Defect Fix	
 
-This method gets tasks which are dependent on predecessor tasks and automatically edits their start and end dates to comply with the predecessor criteria.
+A minor bug occured in the task page when the last task contained a predecessor value which caused the application to fall over.
 ----
