--- a/wiki/Iteration_3__Revisions_9_10_11_12.wiki
+++ b/wiki/Iteration_3__Revisions_9_10_11_12.wiki
@@ -95,3 +95,16 @@ For this version four fixed points were coded into the solution to show the poin
 ----
 ----
 ----
+
+*Revision 11*
+
+For Revision 11 the main task achieved was to add a new method into the DatabaseManager model called AssignPredecessor.
+  
+----
+* 1. AssignPredecessor Method	
+
+This method gets tasks which are dependent on predecessor tasks and automatically edits their start and end dates to comply with the predecessor criteria.
+
+----
+----
+----
